--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -23,5 +23,24 @@
     "searchcommand":"Search Command",
     "clear":"Clear",
     "error_while_saving_service":"Error while saving service info",
-    "error_while_search":"Error while performing search"
+    "error_while_creating_service":"Error while creating service info",
+    "error_while_search":"Error while performing search",
+    "error_while_update":"Error while updating info",
+    "please_select_required_params":"Please select required params",
+    "createnode":"Create node",
+    "nodename":"Node Name",
+    "clientUrl":"Client URL",
+    "logPath":"Log Path",
+    "archiveLogPath":"Archive Path",
+    "logFileName":"File Name",
+    "logFileNameExt":"File Ext",
+    "fileDatePattern":"Date Pattern",
+    "logFileNamePattern":"File Name Pattern",
+    "rollingType":"Rolling",
+    "addNode":"Add Node",
+    "removenode":"Remove Node",
+    "node":"Node",
+    "nodes":"Nodes",
+    "id":"ID",
+    "addLogInfo":"Add LogInfo"
 }
